Responsive version tablette et correction du responsive sur mobile

--- a/src/assets/sass/home.scss
+++ b/src/assets/sass/home.scss
@@ -13,7 +13,7 @@
 
     height: 50vh;
 
-    @media screen and (max-width: 768px) {
+    @media screen and (max-width: 1199px) {
         font-size: 2rem;
         position: static;
         flex-direction: column;
@@ -31,8 +31,8 @@
                 color: #BCC7DF;
                 padding: 0 1.8rem;
 
-                @media screen and (max-width: 768px) {
-                    font-size: 2rem;
+                @media screen and (max-width: 1199px) {
+                    font-size: 3rem;
                     padding-top: 8rem;
                 }
             }
@@ -44,8 +44,8 @@
                 font-size: 2rem;
                 padding: 0 1.5rem;
 
-                @media screen and (max-width: 768px) {
-                    font-size: 1rem;
+                @media screen and (max-width: 1199px) {
+                    font-size: 1.5rem;
                 }
             }
         }
@@ -57,7 +57,6 @@
         left: 50%;
         transform: translate(-50%, -50%);
         display: flex;
-        justify-content: center;
         align-items: center;
         padding: 20px;
         background-color: white;
@@ -68,12 +67,12 @@
             bottom: -19%; // Sur les écrans de plus de 1920px, le filtre ne s'affichait pas correctement
         }
 
-        @media screen and (max-width: 768px) {
+        @media screen and (max-width: 1199px) {
             flex-direction: column;
             transform: none;
             margin-top: 3rem;
             position: static;
-            width: 65%;
+            width: auto;
         }
 
         label {
@@ -87,8 +86,10 @@
             position: relative;
             padding: 0 1rem;
 
-            @media screen and (max-width: 768px) {
+            @media screen and (max-width: 1199px) {
                 border: none;
+                display: flex;
+                flex-direction: column;
             }
 
             .icon {
@@ -96,6 +97,11 @@
                 left: 6px;
                 top: 60%;
                 transform: translateY(-50%);
+
+                @media screen and (max-width: 1199px) {
+                    left: 2px;
+                    top: 63%;
+                }
             }
         }
 
@@ -137,8 +143,8 @@
     #about {
         padding-top: 6rem;
 
-        @media screen and (max-width: 768px) {
-            padding-top: 14rem;
+        @media screen and (max-width: 1199px) {
+            padding-top: 16rem;
         }
 
         .react-datepicker__month {
@@ -173,7 +179,7 @@
             display: flex;
             align-items: center;
 
-            @media screen and (max-width: 768px) {
+            @media screen and (max-width: 1199px) {
                 display: inline-block;
             }
 
@@ -181,6 +187,10 @@
                 flex: 1;
                 font-size: 20px;
                 margin: 0 4rem;
+
+                @media screen and (max-width: 1199px) {
+                    margin: 0 2rem;
+                }
             }
 
             .about-image {
@@ -257,7 +267,7 @@
             align-items: center;
             justify-content: center;
 
-            @media screen and (max-width: 768px) {
+            @media screen and (max-width: 1199px) {
                 flex-direction: column;
             }
 
@@ -270,7 +280,7 @@
                 box-shadow: 5px 5px 15px rgba(0, 0, 0, 0.2);
                 background-color: #FFF;
 
-                @media screen and (max-width: 768px) {
+                @media screen and (max-width: 1199px) {
                     display: inline-block;
                     width: 80%;
                 }
@@ -281,7 +291,7 @@
                     border-radius: 15px 0 0 15px;
                     object-fit: cover;
 
-                    @media screen and (max-width: 768px) {
+                    @media screen and (max-width: 1199px) {
                         border-radius: 15px 15px 0 0;
                     }
                 }
@@ -313,10 +323,7 @@
                         align-items: center;
                         justify-content: space-around;
                         flex-direction: column;
-
-                        @media screen and (max-width: 768px) {                            
-                            padding: 1rem 0;
-                        }
+                        padding: 1rem 0;
 
                         p {
                             font-weight: bold;
@@ -448,33 +455,42 @@
             position: absolute;
             bottom: 0;
             left: 0;
-            width: 100%;            
+            width: 100%;
         }
 
         .rocket-img {
             z-index: 3;
             position: absolute;
             top: 20%;
-            left: 5%;
+            left: 0;
             transform: rotate(17deg);
 
-            @media screen and (max-width: 768px) {
+            @media screen and (max-width: 1199px) {
                 animation: none;
-                width: 40%;
+                width: 35%;
                 position: static;
                 margin: 0 auto;
                 padding-top: 2rem;
             }
-            
+
+            @media screen and (min-width: 1400px) {
+                left: 5%;
+                top: 30%;
+            }
+
             img {
-                width: 50%;
+                width: 40%;
                 height: auto;
 
                 animation: float 4s ease-in-out infinite;
 
-                @media screen and (max-width: 768px) {
+                @media screen and (max-width: 1199px) {
                     animation: none;
-                    width: 100%;                    
+                    width: 100%;
+                }
+
+                @media screen and (min-width: 1400px) {
+                    width: 50%;
                 }
             }
         }
